Modal z-index is fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -234,6 +234,7 @@ code {
   justify-content: center;
   align-items: center;
   transition: 1s;
+  z-index: 1;
 }
 
 .modal-add-coop-wrap-hidden{
